--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "CIS 486 Spring 2025 The Sobie Dev Co. profile",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
   }
 }
